--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-to-matrix": "^1.0.0",
     "jquery": "^3.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-image-parallax": "^1.0.0",
+    "react-image-parallax2": "^0.1.6",
     "react-materialize": "^2.5.0",
+    "react-parallax": "^2.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-scroll-parallax": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
